# opt

./: .gitignore  README.md
first/: Makefile  README.md
first/include/: Benchmark.h  Settings.h  TargetFunction.h
first/include/Benchmark/: BenchmarkResultData.h  BenchmarkStateData.h
first/include/Methods/: DichotomyMethod.h  FibonacciMethod.h  GoldenRatioMethod.h  IMethod.h  NewtonRaphsonMethod.h  PassiveSearchMethod.h  SecantLinesMethod.h  TangentMethod.h
first/include/Printers/: IPrinter.h
first/include/States/: DichotomyState.h  FibonacciState.h  GoldenRatioState.h  IMethodState.h  NewtonRaphsonState.h  PassiveSearchState.h  SecantLinesState.h  TangentState.h
first/include/Tables/: Table.h
first/results/: output.txt  passive_search.txt
first/src/: findmin.cc
second/: Makefile  README.md
second/include/: Function.h  Settings.h  Vector.h
second/include/Benchmark/: BenchmarkResultData.h  BenchmarkStateData.h
second/include/GradientMethods/: ConstStepMethod.h  DivergeSeriesMethod.h  (+2 more)
second/results/: coord_descent.txt  diverge_series.txt  step_splitting.txt  total.txt
second/src/: findroot.cc
third/: CMakeLists.txt  README.md
third/include/: Function.h  Settings.h  StateBuilder.h  Vector2d.h
third/include/Methods/: CondGradMethod.h  CoordDescentMethod.h  ExternalPenaltyMethod.h  IMethod.h  InternalPenaltyMethod.h
third/lib/TablePrinter/: CMakeLists.txt
third/lib/TablePrinter/include/: TablePrinter.h
third/lib/TablePrinter/src/: TablePrinter.cc
third/results/: external_penalty.txt  internal_penalty.txt  total.txt
third/src/: opt.cc
(+7 files in other folders)
